<resources>
    <string name="app_name">별헤는밤 </string>
    <string name="title_home">Home</string>
    <string name="title_main">Main</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_observation">Observation</string>
    <string name="title_star">Star</string>
    <string name="title_review">Review</string>
    <string name="title_person">Person</string>
    <string name="title_photo">Photo</string>
    <string name="title_delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="constellation_content_example"><![CDATA[별자리(constellation)는 천구(celestial sphere)에 투영된 별을 이어 사물이나 인물, 동물을 연상하도록 이름을 붙인 것이다. 따라서 별자리는 문화권과 시대마다 모양이 달랐고, 다른 이름으로 불렸다. 현재는 1930년 국제천문연맹(International Astronomical Union, IAU)에서 천구 전체를 채우도록 정한 88개의 별자리가 공식적인 별자리로 인정받고 있다./> </LinearLayout>]]></string>
    <string name="tp_overview_detail"><u>자세히 보기</u></string>
    <string name="signup_birthDay"><u>선택하기</u></string>
    <string name="signup_must"><u>필수</u></string>
    <string name="signup_no_must"><u>보기</u></string>
    <string name="changeprofile_error">닉네임 형식이 올바르지 않습니다.\n(한글/영문/숫자 조합 15자 이내)</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="wt_help_light_pol">가로등이나 건물의 조명 등 인공적인 빛으로 인해 생기는 공해의 정도입니다. 내가 위치한 곳과 주변 지역의 광공해가 0에 가까울 수록 별을 관측하기에 좋습니다. 별들은 대부분이 인공 조명에 비해 굉장히 어두워, 조금만 광공해가 높아져도 수많은 별들이 잘 보이지 않게 되니 유의해 주세요. 별 헤는 밤에서는 각 지역 최저 광공해값과 최고 광공해값을 함께 제공하고 있습니다. 또한 각 관측지 정보에서는 해당 위치의 정확한 좌표에 해당하는 광공해값을 제공하고 있으니, 여기도 한 번 확인해보세요! </string>
    <string name="wt_help_moon_phase">월령은 쉽게 말해 달의 나이로서, 밤하늘 별 관측에 굉장히 중요한 정보입니다. 별 헤는 밤에서는 0~1 사이의 값으로 제공하며, 0.5에 가까울 수록 보름달이 밝아 별 보기엔 어렵고, 0이나 1에 가까울 수록 초승이나 그믐으로서 달빛이 적어 별 보기 좋습니다. </string>
    <string name="wt_help_cloud">밤하늘 구름 정도입니다. 구름량이 0%에 가까울 수록 깨끗한 하늘에서 별을 볼 수 있답니다. </string>
    <string name="wt_help_wind">바람의 세기입니다. 풍속이 0에 가까울 수록  별 사진을 찍는 데에 좋지만, 또 적당한 바람은 기분을 상쾌하게 해 주거나, 바람이 많이 불면 공기 중의 먼지들을 날려주어 하늘 자체는 깨끗한 경우가 많으니 무엇이 정답이라고 할 수는 없겠네요. 그래도 너무 바람이 세서 눈을 뜨기 힘들거나, 태풍이 부는 날은 피해주세요.</string>
    <string name="wt_help_temp">실외 대기 온도 입니다. 너무 덥거나 춥지만 않다면, 별 보는데에 큰 지장을 주지는 않을 거에요. 그래도 적당히 선선한 기온을 잘 골라 별을 보러 간다면 더욱 좋겠죠?</string>
    <string name="wt_help_humidity">공기 중에 포함되어 있는 수증기의 비율입니다. 과하게 습하거나 건조하지만 않다면 보는 데에 지장은 없지만, 습도가 높으면 안개가 발생할 확률이 높고 별빛이 굴절되어 다소 흐리게 보일 수 있다고 해요.</string>
    <string name="wt_help_precipitation">0.1mm 이상의 비가 내릴 확률입니다. 강수 확률이 높다고 해서 비가 내리는 것도 아니고, 낮다고 해서 비가 절대 안 내리지는 않아요. 그래도 높은 날과 낮은 날 중에서는, 낮은 날을 고르는 게 좋을 거에요!</string>
    <string name="wt_help_fine_dust">입자가 아주 작은 먼지들의 공기 중 농도입니다. \'나쁨\'의 경우 시야도 뿌옇게 보일 수 있기 때문에, 고도가 낮은 지역에서는 특히 별 보기에 좋지 않아요. 무엇보다도 장기간 노출될 경우 건강에도 좋지 않으니 오랜 시간 밖에 머무는 것은 금물!</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="termsAndConditionsTestText">이용약관 내용\n이용약관 내용 <b>진하게</b></string>


    <string name="searchResult_noResult">‘검색어’에 대한\n 검색 결과가 없어요</string>


    <string name="main_help_1">🔎 방법 1. 나침반으로 북쪽 찾기
\n북쪽에 있는 천체는 사시사철 찾기가 쉬워요.
\n북쪽을 축으로 천체가 회전하기 때문이에요! 북쪽 하늘에서 잘 보이는 별자리를 먼저 찾고, 다른 별들을 찾아보세요.
\n
\n🔎 방법 2. 길잡이 별 찾기
\n‘길잡이 별’은 유독 밝게 빛나 찾기 쉬운 별들을 뜻해요. 계절별로 찾기 쉬운 길잡이 별을 먼저 찾은 뒤, 그 주변 별자리들을 하나씩 찾아나가 보세요.
\n(초심자는 북극성을 기준으로 별을 찾는걸 추천해요!)
\n
\n아래에서 계절별 길잡이 별을 확인할 수 있어요.
\n
\n🌟 사시사철 길잡이 별
\n- 북극성
\n- 북두칠성(큰곰자리 일부)
\n- 카시오페이아자리
\n
\n🌟 봄의 길잡이 별
\n- 목동자리
\n- 아쿠루투스
\n- 처녀자리
\n
\n🌟 여름의 길잡이 별
\n- 데네브(백조자리 일부)
\n- 베가(거문고자리 일부)
\n- 알타이아(독수리자리 일부)
\n
\n🌟 가을의 길잡이 별
\n- 페가수스 삼각형
\n
\n🌟 겨울의 길잡이 별
\n- 오리온자리
\n- 큰개자리
\n- 작은개자리
\n- 황소자리
\n- 쌍둥이자리</string>

    <string name="main_help_2">
🔎 은하수를 볼 수 있는 계절
\n우리나라에서 은하수를 볼 수 있는 계절은 보통 3~9월입니다. 겨울철에는 지구 - 태양 – 은하 중심 순서로, 여름철에는 태양 – 지구 – 은하 중심 순서로 위치하기 때문에 특히 6~8월 여름철에 은하수를 더욱 잘 볼 수 있어요.
\n
\n🔎 은하수를 볼 수 있는 시간
\n은하수는 남쪽 지평선 위로 떠올라 남쪽을 바라보고 은하수를 볼 수 있으며, 떠오르는 시간은 매월 약 2시간씩 빨라집니다.
\n그래서 은하수를 볼 수 있는 시간 역시 매월 약 2시간씩 빨라져 3월 04시경을 시작으로, 이후 4월은 02시경, 5월은 00시경이 지나면 은하수를 볼 수 있어요.
\n떠오른 이후 시간이 지남에 따라 사선과 수직 등 다양한 모습을 보이는데, 특히 새벽이 깊어 은하수가 사선을 거쳐 수직으로 지면을 향해 떨어질 때 은하수의 가장 멋진 광경을 포착할 수 있어요.
\n
\n🔎 은하수를 볼 수 있는 곳
\n더불어, 도심을 더욱 멀리 벗어나 ‘관측지 뿐만 아니라 주변 지역까지 광해가 적은 곳이어야 한다’는 장소 조건 역시 은하수 관측에 중요한 요소랍니다.
\n
\n이런 조건을 만족하는 은하수 대표 명소!
\n- 강릉 안반데기
\n- 정선 함백산
\n- 합천 황매산
\n- 부여 성흥산성
\n- 횡성 천문인마을
\n
\n별헤는밤 [관측지] 탭에서 은하수 명소들을 검색하고 아름다운 은하수를 즐겨보세요😊
    </string>
    <string name="main_help_3">
🔎 카메라의 원리
\n카메라는 렌즈로부터 ‘빛을 받아들여’ 기록하는 원리로 작동하는데, 빛을 어떻게 / 얼마만큼 받아들이는지(노출)가 촬영 시 중요한 요소예요. 노출은 크게 ‘조리개’, ‘셔터 스피드’, ‘ISO’ 3가지 요소로 결정되고, 이 요소들을 적절히 조합해 좋은 사진을 담아낼 수 있어요.
\n
\n🔎 카메라 세팅 팁 (삼성 프로모드 기준)
\n
\n️초점 : AF/MF가 표기된 아이콘
\n✴️ MF로 설정, 초첨 레버 \'산\'
\n- MF(멀티포커스)모드 설정 후, 초점 레버를 \'산\'에 최대한으로 위치시킬수록 별을 선명하고 또렷하게 촬영할 수 있어요.
\n
\n️조리개 : F가 표기된 아이콘
\n✴️ F값 낮게
\n- 값이 낮을수록 조리개가 더 많이 개방되고, 빛을 많이 받아들여 사진이 밝게 나와요.
\n- 대부분 스마트폰은 조리개가 고정되어 있거나 두 가지 선택지로 나뉘어 있어요. 후자는 둘 중 낮은 값을 선택하세요!
\n
\n감도 : ISO가 표기된 아이콘
\n✴️ ISO값 높게
\n*추천값 800 (주변 광해가 있으면 400/ 없으면 1600)
\n- 값이 높을수록 센서가 빛에 민감하게 반응해 빛을 많이 받아들이고, 사진이 밝아져서 별을 더 선명하게 찍을 수 있어요.
\n- 단, 화질 저하 / 빛 번짐 현상이 발생할 수 있기 때문에 값을 조절하며 적절히 높은 ISO 값을 잘 찾아보세요.
\n
\n셔터 스피드 : 1/1500이 표기된 아이콘
\n✴️ 1/N에서 N값을 높게
\n*추천값 1/15
\n- 셔터가 열렸다 닫히는 속도로, 1/N은 N초 동안 빛을 받아들여 사진을 촬영하겠다는 의미에요.
\n- N값을 높게 설정할수록 빛을 오래(많이) 받아들여 별을 더 선명하게 찍을 수 있어요.
\n- 단, 셔터 스피드가 너무 느리면(N값이 너무 높으면) 별의 이동이 찍혀 흐릿할 수 있어요.
\n- 셔터가 열려 있는 동안은 사진이 흔들리기 쉬우니 ‘삼각대’로 핸드폰을 고정해보세요. 셔터를 누를 때도 화면이 흔들리기 때문에 타이머, 리모컨 등을 활용하는 걸 추천해요!
\n
\n화이트밸런스 : WB가 표기된 아이콘
\n✴️ 낮을수록 차가운 느낌
\n- 색의 온도를 조절하는 기능으로, 값이 낮을수록 차가운 느낌(파란 톤), 높을수록 따뜻한 느낌(주황 톤)으로 변해요.
\n- 촬영 후 후보정 시 설정하는 경우도 많아요.
\n- 값을 조금 낮게 설정한 차가운 느낌의 별사진을 주로 찾아 볼 수 있어요.
\n
\nRAW
\n- JPG 에 비해 화질 손상 없이 저장되는 파일 확장자예요.
\n- 후보정을 원할 경우 권장하는 사항이에요.
\n- 카메라 앱 설정에서 선택 가능해요.
    </string>
    <string name="main_help_4">
\n🔎 따뜻한 겉옷, 담요
\n산 정상 등 고도가 높은 곳은 새벽에 기온이 많이 떨어져 여름에도 생각보다 추워요. 겨울에는 방한용품이 필수랍니다.
\n
\n🔎 돗자리
\n만성 거북목, 현대인이라면 밤하늘을 올려다보다가 뒷목이 아파 올거에요. 돗자리에 누워 별을 즐기면 목 아프지 않고 더욱 여유롭게 밤하늘을 즐길 수 있어요.
\n
\n🔎 삼각대
\n별 사진 촬영을 위한 필수적인 준비물이예요. 안 가져가면 은근 아쉬울 거에요!
\n
\n🔎 간단한 간식
\n입을 재밌게 해줄 간식이 있으면 심심하지 않죠. 대신 쓰레기는 꼭 다시 챙겨와야 해요.
\n
\n🔎 모기 기피제
\n관측지 위치 특성상 주변에 풀과 나무가 많아 벌레와 모기를 조심해야 해요.
    </string>
    <string name="main_help_5">
별 관측은 매우 어둡고 조용한 환경에서 이루어지는 특별한 활동이에요. 이 특별함을 모두가 온전히 즐기려면, 타인을 배려하고 서로의 관측을 방해하지 않도록 주의를 기울여야 하죠.
\n특히 별을 처음 즐기러 간다면 잘 모를 수 있기 때문에, 아래 에티켓을 잘 지켜 타인과 함께 기분 좋게 별을 즐겨 보아요.
\n
\n🔎 ‘빛’을 조심하기 (폰, 손전등, 차량 라이트 등)
\n우리는 암적응을 해야 별을 잘 볼 수 있고, 별 사진을 찍을 때는 셔터 스피드를 늦추는 장노출을 활용해요.
\n이 때, 눈이나 카메라 렌즈에 주변 빛이 들어오면 별 관측/촬영에 매우 큰 방해가 될 수 있어요.
\n따라서 자동차로 별 관측지에 진입할 땐 위험하지 않은 선에서 차량 라이트를 끈 뒤 안개등만으로 진입하고, 진입 완료 후 빠르게 모든 라이트를 꺼주세요.
\n손전등 활용 시에는 빛을 바닥 방향으로 하여 타인이나 하늘로 비추지 않도록 유의해 주세요.
\n
\n🔎 큰 소리 내지 않기
\n사람들은 시끌벅적한 도시를 벗어나 아늑하고 감성적인 시간을 즐기고자 별을 보러 가요. 소음은 이런 분위기를 즐기기에 방해가 되니 주의를 기울여주세요.
\n
\n🔎 쓰레기는 내 주머니에
\n관측지 특성상 어둡고 대부분 쓰레기통이 없기 때문에 쓰레기를 방치해두고 가는 경우가 있는데, 결국 관리가 안되어서 관측지가 폐쇄되는 지경에 이르기도 해요. 기본 상식이니 꼭 지켜서 올바른 문화를 만들도록 해요😊
    </string>
</resources>