<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/mainpage_bar_main"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_observation"
        android:icon="@drawable/mainpage_bar_observation"
        android:title="@string/title_observation" />


    <item
        android:id="@+id/navigation_star"
        android:icon="@drawable/mainpage_bar_night"
        android:title="@string/title_star" />


    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/mainpage_bar_review"
        android:title="@string/title_review" />


    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/mainpage_bar_profile"
        android:title="@string/title_person" />

</menu>